--- a/index.html
+++ b/index.html
@@ -1,145 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Entrata Webhooks Diagnostic Viewer</title>
-    <script src="https://cdn.jsdelivr.net/npm/@microsoft/signalr@7.0.5/dist/browser/signalr.min.js"></script>
-    <style>
-        body { font-family: Arial, sans-serif; background-color: #f4f6f8; padding: 2rem; }
-        h1 { color: #12334e; }
-        .status-line { margin: 0.5rem 0; }
-        .status-badge { padding: 0.3rem 0.6rem; border-radius: 6px; font-weight: bold; }
-        .ok { background: #c6f6d5; color: #22543d; }
-        .warn { background: #fefcbf; color: #744210; }
-        .error { background: #fed7d7; color: #742a2a; }
-        #logs { margin-top: 2rem; padding: 1rem; background: #fff; border-radius: 8px;
-                box-shadow: 0 0 10px rgba(0,0,0,0.1); white-space: pre-wrap;
-                font-family: monospace; height: 600px; overflow-y: auto; }
-        .log-entry { margin: 0.25rem 0; }
-        .info { color: #12334e; }
-        .success { color: green; }
-        .error-log { color: red; }
-        .data { color: #555; }
-    </style>
+  <meta charset="UTF-8">
+  <title>Entrata Webhooks Diagnostic Viewer</title>
+  <script src="https://cdn.jsdelivr.net/npm/@microsoft/signalr@7.0.5/dist/browser/signalr.min.js"></script>
+  <style>
+    body { font-family: Arial, sans-serif; background-color: #f4f6f8; padding: 2rem; }
+    h1 { color: #12334e; }
+    .status-line { margin: 0.5rem 0; }
+    .status-badge { padding: 0.3rem 0.6rem; border-radius: 6px; font-weight: bold; }
+    .ok { background: #c6f6d5; color: #22543d; }
+    .warn { background: #fefcbf; color: #744210; }
+    .error { background: #fed7d7; color: #742a2a; }
+    #logs { margin-top: 2rem; padding: 1rem; background: #fff; border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1); white-space: pre-wrap;
+            font-family: monospace; height: 600px; overflow-y: auto; }
+    .log-entry { margin: 0.25rem 0; }
+    .info { color: #12334e; }
+    .success { color: green; }
+    .error-log { color: red; }
+    .data { color: #555; }
+  </style>
 </head>
 <body>
-    <h1>📡 Entrata Webhooks Diagnostic Viewer</h1>
-    <div class="status-line">Function App (negotiate): <span id="negotiate-status" class="status-badge warn">⏳ Checking...</span></div>
-    <div class="status-line">Function App (webhook): <span id="webhook-status" class="status-badge warn">⏳ Checking...</span></div>
-    <div class="status-line">SignalR: <span id="signalr-status" class="status-badge warn">⏳ Connecting...</span></div>
-    <div id="logs">⏳ Initializing...</div>
+  <h1>📡 Entrata Webhooks Diagnostic Viewer</h1>
+  <div class="status-line">SignalR: <span id="signalr-status" class="status-badge warn">⏳ Connecting...</span></div>
+  <div id="logs">⏳ Initializing...</div>
 
 <script>
-    const logsDiv = document.getElementById("logs");
-    const negotiateStatus = document.getElementById("negotiate-status");
-    const webhookStatus = document.getElementById("webhook-status");
-    const signalrStatus = document.getElementById("signalr-status");
+  const logsDiv = document.getElementById("logs");
+  const signalrStatus = document.getElementById("signalr-status");
 
-    function log(message, type="info", data=null) {
-        const entry = document.createElement("div");
-        entry.classList.add("log-entry", type === "error" ? "error-log" : type);
-        let content = `📝 ${new Date().toLocaleTimeString()} - ${message}`;
-        if (data) {
-            if (typeof data === "string") content += "\n" + data;
-            else content += "\n" + JSON.stringify(data, null, 2);
-        }
-        entry.textContent = content;
-        logsDiv.appendChild(entry);
-        logsDiv.scrollTop = logsDiv.scrollHeight;
-        console[type === "error" ? "error" : "log"](message, data || "");
+  function log(message, type="info", data=null) {
+    const entry = document.createElement("div");
+    entry.classList.add("log-entry", type === "error" ? "error-log" : type);
+    let content = `📝 ${new Date().toLocaleTimeString()} - ${message}`;
+    if (data) {
+      if (typeof data === "string") content += "\n" + data;
+      else content += "\n" + JSON.stringify(data, null, 2);
     }
+    entry.textContent = content;
+    logsDiv.appendChild(entry);
+    logsDiv.scrollTop = logsDiv.scrollHeight;
+    console[type === "error" ? "error" : "log"](message, data || "");
+  }
 
-    async function checkEndpoint(name, url, method="GET", statusEl) {
-        try {
-            log(`Checking ${name} endpoint: ${url}`, "info");
-            const resp = await fetch(url, { method });
-            const text = await resp.text();
-            log(`${name} raw response`, "data", { status: resp.status, headers: [...resp.headers], body: text });
+  async function startSignalR() {
+    try {
+      log("Fetching negotiate info...", "info");
+      const resp = await fetch("https://entratawebhookv2.azurewebsites.net/api/negotiate", { method: "POST" });
+      const text = await resp.text();
+      log("Negotiate response", "data", text);
 
-            if (resp.ok && text.trim()) {
-                statusEl.textContent = "✅ Healthy";
-                statusEl.className = "status-badge ok";
-                return { ok: true, body: text };
-            } else {
-                statusEl.textContent = "⚠️ Unhealthy";
-                statusEl.className = "status-badge warn";
-                return { ok: false, body: text };
-            }
-        } catch (err) {
-            statusEl.textContent = "❌ Error";
-            statusEl.className = "status-badge error";
-            log(`${name} check failed`, "error", err);
-            return { ok: false, body: null };
-        }
+      const negotiateData = JSON.parse(text);
+
+      const connection = new signalR.HubConnectionBuilder()
+        .withUrl(negotiateData.url, {
+          accessTokenFactory: () => negotiateData.accessToken
+        })
+        .configureLogging(signalR.LogLevel.Trace)
+        .build();
+
+      connection.on("newWebhookEvent", (data) => {
+        log("📩 Webhook event received", "success", data);
+      });
+
+      connection.onclose(err => {
+        signalrStatus.textContent = "❌ Disconnected";
+        signalrStatus.className = "status-badge error";
+        log("SignalR connection closed", "error", err);
+      });
+      connection.onreconnecting(err => {
+        signalrStatus.textContent = "⚠️ Reconnecting...";
+        signalrStatus.className = "status-badge warn";
+        log("SignalR reconnecting...", "error", err);
+      });
+      connection.onreconnected(id => {
+        signalrStatus.textContent = "✅ Reconnected";
+        signalrStatus.className = "status-badge ok";
+        log("SignalR reconnected", "success", { connectionId: id });
+      });
+
+      log("Starting SignalR connection...", "info");
+      await connection.start();
+      signalrStatus.textContent = "✅ Connected";
+      signalrStatus.className = "status-badge ok";
+      log("SignalR connected successfully", "success");
+
+    } catch (err) {
+      signalrStatus.textContent = "❌ Error";
+      signalrStatus.className = "status-badge error";
+      log("SignalR start failed", "error", err);
     }
+  }
 
-    async function startSignalR() {
-        const negotiate = await checkEndpoint("Negotiate", "https://entratawebhookv2.azurewebsites.net/api/negotiate", "POST", negotiateStatus);
-        if (!negotiate.ok) return;
-
-        let negotiateData;
-        try {
-            negotiateData = JSON.parse(negotiate.body);
-        } catch (err) {
-            log("Failed to parse negotiate JSON", "error", { error: err, body: negotiate.body });
-            return;
-        }
-
-        if (!negotiateData.url || !negotiateData.accessToken) {
-            log("Negotiate response missing required fields", "error", negotiateData);
-            return;
-        }
-
-        try {
-            const connection = new signalR.HubConnectionBuilder()
-                .withUrl(negotiateData.url, {
-                    accessTokenFactory: () => negotiateData.accessToken
-                })
-                .configureLogging(signalR.LogLevel.Trace)
-                .build();
-
-            connection.on("newWebhookEvent", (data) => {
-                log("📩 Webhook event received", "success", data);
-            });
-
-            connection.onclose(err => {
-                signalrStatus.textContent = "❌ Disconnected";
-                signalrStatus.className = "status-badge error";
-                log("SignalR connection closed", "error", err);
-            });
-            connection.onreconnecting(err => {
-                signalrStatus.textContent = "⚠️ Reconnecting...";
-                signalrStatus.className = "status-badge warn";
-                log("SignalR reconnecting...", "error", err);
-            });
-            connection.onreconnected(id => {
-                signalrStatus.textContent = "✅ Reconnected";
-                signalrStatus.className = "status-badge ok";
-                log("SignalR reconnected", "success", { connectionId: id });
-            });
-
-            log("Starting SignalR connection...", "info");
-            await connection.start();
-            signalrStatus.textContent = "✅ Connected";
-            signalrStatus.className = "status-badge ok";
-            log("SignalR connected successfully", "success");
-
-        } catch (err) {
-            signalrStatus.textContent = "❌ Error";
-            signalrStatus.className = "status-badge error";
-            log("SignalR start failed", "error", err);
-        }
-    }
-
-    async function runDiagnostics() {
-        await checkEndpoint("Webhook", "https://entratawebhookv2.azurewebsites.net/api/entratawhhttp", "GET", webhookStatus);
-        await startSignalR();
-    }
-
-    runDiagnostics();
-
-    // Repeat every 60 seconds
-    setInterval(runDiagnostics, 60000);
+  startSignalR();
 </script>
 </body>
 </html>
