--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Entrata Webhooks Diagnostic Viewer</title>
+  <title>Entrata Webhooks Event Viewer</title>
   <script src="https://cdn.jsdelivr.net/npm/@microsoft/signalr@7.0.5/dist/browser/signalr.min.js"></script>
   <style>
     body { font-family: Arial, sans-serif; background-color: #f4f6f8; padding: 2rem; }
