--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </style>
 </head>
 <body>
-  <h1>📡 Entrata Webhooks Diagnostic Viewer</h1>
+  <h1>📡 Entrata Webhooks Event Viewer</h1>
   <div class="status-line">Function App (negotiate): <span id="negotiate-status" class="status-badge warn">⏳ Checking...</span></div>
   <div class="status-line">Function App (webhook): <span id="webhook-status" class="status-badge warn">⏳ Checking...</span></div>
   <div class="status-line">SignalR: <span id="signalr-status" class="status-badge warn">⏳ Connecting...</span></div>
